--- a/article.html
+++ b/article.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article</title>
-</head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <title>Calculate</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+       
+    </head>
 <body>
-    <h1>as</h1>
+    
+    <div class="top">
+        <div class="banner">
+            <img src="banner.png" alt="banner">
+            <div class="banner_text">To know about your full payment</div>
+        </div>
+    </div>
+    <div class="middle">
+        General Inquiries: (+94) 011 2881 000 
+        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
+    </div>
+
+    <header class="header">
+        <a href="#l" class="logo">Logo</a>
+
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class='bx bx-x' id="close-icon"></i>
+        </label>
+
+        <nav class="navbar">
+            <a href="Home.html" style="--i:0;">Home</a>
+            <a href="Calculate.html" style="--i:1;">Calculate</a>
+            <a href="article.html" style="--i:2;">Article</a>
+            <a href="events.html" style="--i:3;">Events</a>
+            <a href="aboutus.html" style="--i:4;">About Us</a>
+        </nav>
+
+    </header>
 </body>
 </html>
