--- a/Home.html
+++ b/Home.html
@@ -9,8 +9,8 @@
     <title>Calculate</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-   
 </head>
+<body>
 <body>
     
     <div class="top">
@@ -36,8 +36,8 @@
         <nav class="navbar">
             <a href="Home.html" style="--i:0;">Home</a>
             <a href="Calculate.html" style="--i:1;">Calculate</a>
-            <a href="article.html" style="--i:2;">Article</a>
-            <a href="events.html" style="--i:3;">Events</a>
+            <a href="Article.html" style="--i:2;">Article</a>
+            <a href="Event.html" style="--i:3;">Events</a>
             <a href="aboutus.html" style="--i:4;">About Us</a>
         </nav>
 
