--- a/Calculate.html
+++ b/Calculate.html
@@ -25,11 +25,11 @@
     <header class="header">
         <a href="#logo" class="logo">Logo</a>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Calculate</a>
-            <a href="#">Home</a>
-            <a href="#">Home</a>
-            <a href="#">Home</a>
+            <a href="Home.html" style="--i:0;">Home</a>
+            <a href="Calculate.html" style="--i:1;">Calculate</a>
+            <a href="article.html" style="--i:2;">Article</a>
+            <a href="events.html" style="--i:3;">Events</a>
+            <a href="aboutus.html" style="--i:4;">About Us</a>
         </nav>
     </header>
 
