--- a/Home.html
+++ b/Home.html
@@ -22,6 +22,7 @@
     <div class="middle">
         General Inquiries: (+94) 011 2881 000 
         Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
+        hhkshdiuhfojkjoodijk
     </div>
 
     <header class="header">
