--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
             <a href="events.html" style="--i:3;">Events</a>
             <a href="aboutus.html" style="--i:4;">About Us</a>
         </nav>
-
-    </header>
+        <p>hshsjjakks</p>
+   </header>
 </body>
 </html>
