--- a/events.html
+++ b/events.html
@@ -41,5 +41,8 @@
             <a href="aboutus.html" style="--i:4;">About Us</a>
         </nav>
     </header>
+
+    <h1 style="font-size: large;" >stupid Kanzul</h1>
+
 </body>
 </html>
