--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
 
-    <h1 style="font-size: large;" >stupid Kanzul</h1>
+    <h1 style="font-size: 40px ;text-align: center; " >stupid Kanzul</h1>
 
 </body>
 </html>
