--- a/Home.html
+++ b/Home.html
@@ -73,6 +73,11 @@
             Mark your calendar!  
         </p>
     </div>
+    <div class="g2">
+        <a href="article.html">
+            <img src="Brotherhood.jpg" alt="Article Image">
+            <div class="o2">Read Article</div>
+        </a>
 
 
 </body>
