--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,14 @@
 
     </header>
 
-    
+     <!-- Latest Updates and Achievements Section -->
+     <div class="section" id="latest-updates">
+        <h2>Latest Updates and Achievements</h2>
+        <p>
+            Explore our latest articles and stay informed about the groundbreaking research and achievements of our students and faculty.
+            From cutting-edge discoveries to inspiring success stories, Open University of SriLanka is a hub of innovation and excellence.
+        </p>
+    </div>
     <div class="gallery">
         <a href="article.html">
             <img src="Brotherhood.jpg" alt="Article Image">
@@ -51,6 +58,13 @@
         </a>
 
         <!-- Add more gallery items as needed -->
+    </div>
+    <!-- Upcoming Events Section -->
+    <div class="section" id="upcoming-events">
+        <h2>Upcoming Events to Fuel Your Curiosity</h2>
+        <p>
+            Mark your calendar!  
+        </p>
     </div>
 
 </body>
