--- a/Home.html
+++ b/Home.html
@@ -21,21 +21,17 @@
     </div>
     <div class="middle">
         General Inquiries: (+94) 011 2881 000 
-        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040
-       
+        Exams/Certificates: (+94) 11-2881461 | (+94) 11-2881040   
     </div>
 
     <header class="header">
-        
-
         <nav class="navbar">
             <a href="Home.html" style="--i:0;">Home</a>
             <a href="Calculate.html" style="--i:1;">Calculate</a>
-            <a href="Article.html" style="--i:2;">Article</a>
-            <a href="Event.html" style="--i:3;">Events</a>
+            <a href="article.html" style="--i:2;">Article</a>
+            <a href="events.html" style="--i:3;">Events</a>
             <a href="aboutus.html" style="--i:4;">About Us</a>
         </nav>
-
     </header>
 
      <!-- Latest Updates and Achievements Section -->
