--- a/events.html
+++ b/events.html
@@ -95,6 +95,12 @@
                 <p class="event-description"><a href="event1-details.html">Click to know more..</a></p>
             </div>
 
+            <div class="event-card">
+                <img src="event2.jpg" class="event-image">
+                <h3><center>ART GALLERY</center></h3>
+                <p class="event-description"><a href="event1-details.html">Click to know more..</a></p>
+            </div>
+
             <!-- Add more events as needed -->
 
         </div>
