--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,35 @@
     <title>Calculate</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Initial text
+            document.querySelector('.banner_text').innerText = "To know about your full payment";
+
+            // Array of messages to loop through
+            const messages = [
+                "To know about your university",
+                "To know about University events",
+                "To know about your Degree"
+            ];
+
+            let index = 0;
+
+            // Set interval to change text every 5 seconds
+            const intervalId = setInterval(function() {
+                document.querySelector('.banner_text').innerText = messages[index];
+                index = (index + 1) % messages.length; // Move to the next message, loop back to the start if at the end
+            }, 2000);
+
+            // Clear the interval after a specific number of iterations (adjust as needed)
+            const totalIterations = 10; // Change this to the desired number of iterations
+            let iterations = 0;
+
+            setTimeout(function() {
+                clearInterval(intervalId);
+            }, 2000 * totalIterations);
+        });
+    </script>
 </head>
 <body>
 <body>
