--- a/article.html
+++ b/article.html
@@ -18,8 +18,8 @@
             // Array of messages to loop through
             const messages = [
                 "To know about your university",
-                "To know about University events",
-                "To know about your Degree"
+                "To know about university events",
+                "To know about your degree"
             ];
 
             let index = 0;
