--- a/article.html
+++ b/article.html
@@ -104,7 +104,7 @@
 
     <div class="top">
         <div class="banner">
-            <img src="banner.png" alt="banner">
+            <img src="Open sesame.png" alt="banner">
             <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
