--- a/Calculate.html
+++ b/Calculate.html
@@ -43,7 +43,7 @@
 
     <div class="top">
         <div class="banner">
-            <img src="banner.png" alt="banner">
+            <img src="Open sesame.png" alt="banner">
             <div class="banner_text">To know about your full payment</div>
         </div>
     </div>
