--- a/Home.html
+++ b/Home.html
@@ -75,7 +75,7 @@
             <div class="overlay">View Event</div>
         </a>
         <div class="vertical-articles">
-            <h2>Recent Articles</h2>
+            <h2>Recent Updates</h2>
             <div class="article">
                 <a href="article.html">
                 <img src="Brotherhood.jpg" alt="Article 1 Thumbnail">
