--- a/aboutus.html
+++ b/aboutus.html
@@ -57,5 +57,21 @@
         </nav>
 
     </header>
+
+    <div class="about-us-container">
+        <img src="kylix.png" alt="Kylix Logo" class="about-us-logo">
+        <div class="about-us-content">
+            <h2>About Us - Team Kylix</h2>
+            <p>Team Kylix, established in December 2022 by Vinod Warnakulasooriya, a software engineering student at the Open University of Sri Lanka, is dedicated to gaining valuable experience in the software development industry.</p>
+            <p>Our team has grown since its inception, and we are passionate about building dreams through innovative software solutions. Join us on our journey to explore the realms of technology and create meaningful projects.</p>
+            <h3>Meet Our Team</h3>
+            <ul>
+                <li><strong>Vinod Warnakulasooriya</strong> - Founder & Software Engineer</li>
+                <li><strong>John Doe</strong> - UI/UX Designer</li>
+                <li><strong>Jane Smith</strong> - Backend Developer</li>
+                <!-- Add more team members and their roles as needed -->
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
